force-app/main/default/objects/Claude_API_Config__mdt/Claude_API_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Claude API calls</description>
    <label>Claude API Config</label>
    <pluralLabel>Claude APIs Configs</pluralLabel>
</CustomObject>