force-app/main/default/objects/Claude_API_Config__mdt/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <label>Endpoint Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>