force-app/main/default/objects/Claude_API_Config__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>